<?xml version="1.0" encoding="utf-8"?>
<!-- Linear layout start here -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea_vacation"
    android:fadingEdge="horizontal"
    android:orientation="vertical"
    tools:context="com.haven.hotels.hotelshaven.activities.MainActivity">

    <!-- Text view for Hotels Haven Text -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:paddingTop="5dp"
        android:layout_gravity="center"
        android:src="@drawable/tlogo44"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="15dp"
        android:paddingTop="0dp"
        android:shadowColor="@android:color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        android:typeface="sans" />


    <!-- Textview for Destination text -->
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:text="@string/destinationText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <!-- Edit text for entering destination with hint -->
    <EditText
        android:id="@+id/destinationedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/destinationPlaceholderText"
        android:textColorHint="@android:color/white"
        android:ems="10"
        android:fadingEdgeLength="10dp"
        android:inputType="text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textAlignment="center" >
        <requestFocus />
    </EditText>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="25dp" >

            <TextView
                android:id="@+id/checkinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/checkInDate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/checkoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/checkOutDate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="20dp" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp" >

            <EditText
                android:id="@+id/checkinDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:textColor="@color/white"
                android:textSize="20dp"
                style="?android:attr/spinnerStyle"
                android:layout_marginLeft="55dp"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/checkoutDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textAlignment="center"
                style="?android:attr/spinnerStyle"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:layout_marginLeft="25dp" />

        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/adultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="83dp"
                android:text="@string/adultGuest"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/childrenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/childrenGuest"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/roomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/roomDropdown"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:textSize="20dp" />

        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp">

            <Spinner
                android:id="@+id/adultSpinner"
                style="@style/spinner_seven"
                android:entries="@array/adultGuestArray" />

            <Spinner
                android:id="@+id/childrenSpinner"
                style="@style/spinner_seven_child"
                android:entries="@array/childrenGuestArray" />

            <Spinner
                android:id="@+id/roomSpinner"
                style="@style/spinner_seven_room"
                android:entries="@array/roomArray" />
        </TableRow>
    </TableLayout>

    <!-- Button for calculating the formula, when pressed, with calculate written over it -->
    <Button
        android:id="@+id/findhotels"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fadingEdge="vertical"
        android:longClickable="true"
        android:nextFocusRight="@android:color/holo_blue_dark"
        android:text="@string/submitButton"
        android:textStyle="bold"
        android:textSize="25dp"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/white"
        android:visibility="visible" />

    <!-- Text view for showing result -->
    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:paddingTop="10dp"
        android:text="Our Partners:"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/lateroomsPartner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/rsz_lateroom" />

        <ImageView
            android:id="@+id/bookingPartner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="200dp"
            android:paddingTop="5dp"
            android:src="@drawable/rsz_hotelscombo" />

        <ImageView
            android:id="@+id/hotelscombinedPartner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/rsz_bookinglogo" />
    </RelativeLayout>
</LinearLayout>
    <!-- Linear layout ends here -->
